fix: layout issues on mobile viewports (max-width: 1024px)

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -121,8 +121,14 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    margin:0 auto;
+    margin-top: -150px;
+
    }  
+
+   .card-cover{
+    position: absolute;
+    transform: translateX(20%);
+   }
    .card-wrapper{
     display: flex;
     justify-content: center;
@@ -130,7 +136,7 @@
     width: 100%;
     height: auto;
    margin-bottom: auto; 
-    position: relative; 
+    position: relative;
 }
 .prev-button, .next-button{
     background: none;
@@ -189,6 +195,7 @@ transition: background-color 0.2s ease-in-out;
     height: 260px;
     position:relative;
     margin: 0 auto;
+    margin-top: -50%;
 }
 .skill-container{
     position: absolute;
@@ -199,8 +206,7 @@ transition: background-color 0.2s ease-in-out;
     transition: transform 0.5s ease-in-out;
     width: 100%;
     height: 100%;
-    left: 0;
-    top: 0;
+   
 }
 .skill-container:first-child{
     transform: translateX(0);
@@ -222,21 +228,41 @@ transition: background-color 0.2s ease-in-out;
    }
 
    .h6-container h6{
-    font-size:1.5em;
+    font-size:1.4em;
+
    }
    .about-container{
     position:absolute;
     max-width: 360px;
     width: 70%;
-    height: 75%; 
+    height: 68%; 
     margin: 15% 10%  auto;
    }
 
    .about-container p{
     font-size: 17px;
+    top: 5px;
    }
   
    .link-container{
-    bottom: -12px;
+    bottom: 3px;
+    width: 190px;
+    height: 26px;
 }
+.links-btn{
+    height: 100%;
+   width: 190px;
+   font-size: 18px;
+   padding: 3px;
+}
+
+.links{
+    width: 100%;
+    height: inherit;
+    
+}
+.links a{
+font-size: 20px;
+}
+
 }
